--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3WjU/SiEMIXR5Rd9NuZAUuDbrjkj5VinMJW0/rrig2U=
 APP_DEBUG=true
 APP_URL=http://localhost
 
